src/test/ui/feature-gates/feature-gate-static_in_pattern.rs
static ZERO: i32 = 0;

pub fn main() {
    match 0 {
        ZERO => true,
        _ => false,
    };
}
